// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when system check fails > shows error when git is missing > system-check-failure 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Check your system                                                    Todo (0/6)

 Checking that your system has everything we need.                    ✘ Check your system
                                                                      ○ Sign in to Confidence
 ✔ Node.js vX.Y.Z                                                     ○ Set up your AI agent
 ✘ Git                                                                ○ Connect Confidence tools
                                                                      ○ Choose features
 Some required tools are missing. Install them and retry.             ○ Set up your project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Required tools are missing.

 ❯ Retry
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when system check fails > shows error when node is not on PATH > system-check-node-missing 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Check your system                                                    Todo (0/6)

 Checking that your system has everything we need.                    ✘ Check your system
                                                                      ○ Sign in to Confidence
 ✘ Node.js                                                            ○ Set up your AI agent
 ✔ Git X.Y.Z                                                          ○ Connect Confidence tools
                                                                      ○ Choose features
 Some required tools are missing. Install them and retry.             ○ Set up your project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Required tools are missing.

 ❯ Retry
   Quit

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;
